--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -942,9 +942,28 @@ we can compactly write the Reynolds-stress equation in its common form
 		+ \frac{\partial}{\partial x_k} \left(\nu \frac{\partial \hat\tau_{ij}}{\partial x_k} + C_{ijk}\right).
 	\end{equation}
 \end{eqBox}
-We are still left with a system of equations that remains to be closed. In the quest of solving turbulent flows using the RANS equations, we dedicate the rest of this chapter to the derivation of common algebraic models that have been devised to give closure to these equations.
+We are still left with a system of equations that remains to be closed. In the quest of solving turbulent flows using the RANS equations, we dedicate the rest of this chapter to the derivation of common models that have been devised to give closure to these equations.
 \section{Turbulence Modelling}
+We have already derived the time-averaged flow equations, which are generally used in the modelling of industrial turbulent flows due to their relatively low computational cost. However, we have also stated that their use is limited to obtaining mean flow properties. In addition, we have shown that the time-averaged conservation laws require additional mathematical equations due to the closure problem in turbulence. Specifically, we intend to show simple models to compute the Reynolds stresses, which appear due to the averaging of the original Navier-Stokes equations. 
 \subsection{The Boussinesq Hypothesis}
+In 1877, Boussinesq assumed that the Reynolds stresses were related to the mean flow, specifically the mean strain tensor $\overline S_{ij}$. This hypothesis was based on principles of kinetic theory of gases. The interaction of turbulent eddies with each other led to hypothesize that a relationship between turbulent and molecular motion existed. This hypothesis can be written
+\begin{equation}
+	-\rho \overline{v_i^\prime v_j^\prime} = 
+		2 \mu_\tau \left(\overline S_{ij} - \frac{1}{3} \frac{\partial \overline v_k}{\partial x_k}\delta_{ij}
+		\right) - \frac{2}{3} k \delta_{ij},
+	\label{eq:boussinesq_approximation}
+\end{equation}
+where
+\begin{equation}
+	\overline S_{ij} = 
+	\frac{\partial \overline v_i}{\partial x_j} 
+		+ \frac{\partial \overline v_j}{\partial x_i},
+\end{equation}
+$k$ is the kinetic energy $\frac{1}{2}\overline{v_i^\prime v_i^\prime}$, $\delta_{ij}$ is the Kronecker delta and $u_\tau$ is an isotropic scalar quantity, known as \textit{eddy viscosity}. For incompressible flows, the second term in equation~\ref{eq:boussinesq_approximation} vanishes due to continuity. Now we have equations for the Reynolds stress tensor and can give closure to the RANS equations.  What remains is to define the value of the viscosity coefficient, which is a parameter that does not depend on the fluid, but the characteristics of the flow field. 
+
+Furthermore, note that the resulting Reynolds stresses, which appeared from the averaging of the convective term of the Navier-Stokes equations, are now represented as additional viscous terms. Hence, we may be neglecting the convective effects of these stresses and introducing additional dissipation into our equations. However, despite the lack of theoretical validity behind the Boussinesq assumption, it has proven to show relatively good results for fairly simple flows. These include simple shear layers and attached boundary layers, as stated in~\ref{NASA}. 
+
+
 \subsection{The Mixing Length Model}
 \subsection{The Spalart-Allmaras Model}
 \subsection{The k-$\epsilon$ Model}
